# Ferrite

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
crates/ferrite/: Cargo.toml
crates/ferrite-core/: Cargo.toml
crates/ferrite-core/src/: app.rs  clipboard.rs  color.rs  context.rs  dirty.rs  draw.rs  event.rs  image.rs  lib.rs  overlay.rs  theme.rs  toast.rs  view.rs  widget.rs  widgets.rs
crates/ferrite-layout/: Cargo.toml
crates/ferrite-layout/src/: lib.rs
crates/ferrite-reactive/: Cargo.toml
crates/ferrite-reactive/src/: animation.rs  lib.rs  runtime.rs  scope.rs  spring.rs  tween.rs
crates/ferrite-render-skia/: Cargo.toml
crates/ferrite-render-skia/src/: lib.rs
crates/ferrite-window/: Cargo.toml
crates/ferrite-window/src/: clipboard.rs  lib.rs
crates/ferrite/src/: lib.rs
examples/animation_showcase/: Cargo.toml
examples/animation_showcase/src/: main.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/dynamic_list/: Cargo.toml
examples/dynamic_list/src/: main.rs
examples/image/: Cargo.toml
examples/image/src/: main.rs
examples/overlays/: Cargo.toml
examples/overlays/src/: main.rs
examples/scroll/: Cargo.toml
examples/scroll/src/: main.rs
examples/slider/: Cargo.toml
examples/slider/src/: main.rs
examples/test_layout/src/: main.rs
examples/text_input/: Cargo.toml
examples/text_input/src/: main.rs
examples/text_wrap/: Cargo.toml
examples/text_wrap/src/: main.rs
examples/textarea/: Cargo.toml
examples/textarea/src/: main.rs
examples/window_counter/: Cargo.toml
examples/window_counter/src/: main.rs
