[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/counter",
    "examples/window_counter",
    "examples/text_input",
    "examples/slider",
    "examples/scroll"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
ferrite-reactive = { path = "crates/ferrite-reactive" }
ferrite-layout = { path = "crates/ferrite-layout" }
ferrite-core = { path = "crates/ferrite-core" }
ferrite-render-skia = { path = "crates/ferrite-render-skia" }
ferrite-window = { path = "crates/ferrite-window" }
taffy = "0.5"
tiny-skia = "0.11"
